--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
           GOOS=linux GOARCH=amd64 go build -o server
 
       - name: Zip Application
-        run: zip -r application.zip server Procfile .ebextensions
+        run: zip -r application.zip server
 
       - name: List Contents of Zip File
         run: unzip -l application.zip
