--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
           GOOS=linux GOARCH=amd64 go build -o application
 
       - name: Zip Application
-        run: zip -r application.zip application .ebextensions Procfile
+        run: zip -r application.zip application go.mod go.sum .ebextensions
 
       - name: List Contents of Zip File
         run: unzip -l application.zip
